--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,4 @@
+@import 'admin-lte/build/scss/adminlte';
 @import 'bootstrap/scss/bootstrap';
-@import 'bootstrap-icons/font/bootstrap-icons';
+@import 'custom.scss';
+@import '@fortawesome/fontawesome-free/scss/fontawesome';
