--- a/app/views/layouts/admin_application.html.erb
+++ b/app/views/layouts/admin_application.html.erb
@@ -10,9 +10,11 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
-    <%= render "layouts/header" %>
-    <div class="container">
+  <body class="sidebar_mini layout-fixed sidebar-closed sidebar-collapse">
+    <div class="wrapper">
+    <%= render "layouts/headeradmin" %>
+    <%= render "layouts/sidebaradmin" %>
+    <div class="content-wrapper">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<% message_type %>">
           <%= message %>
@@ -20,6 +22,7 @@
       <% end %>
       <%= yield %>
       <%= render "layouts/footer" %>
+    </div>
     </div>
   </body>
 </html>
