--- a/app/views/layouts/_sidebaradmin.html.erb
+++ b/app/views/layouts/_sidebaradmin.html.erb
@@ -33,15 +33,21 @@
           <% end %>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <%= link_to "#", class: "nav-link" do %>
+              <%= link_to admin_books_path, class: "nav-link" do %>
                 <i class="far fa-circle nav-icon"></i>
                 <p><%= t ".books" %></p>
               <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "#", class: "nav-link" do %>
+              <%= link_to admin_authors_path, class: "nav-link" do %>
                 <i class="far fa-circle nav-icon"></i>
-                <p><%= t ".stat" %></p>
+                <p><%= t ".authors" %></p>
+              <% end %>
+            </li>
+            <li class="nav-item">
+              <%= link_to admin_publishers_path, class: "nav-link" do %>
+                <i class="far fa-circle nav-icon"></i>
+                <p><%= t ".publishers" %></p>
               <% end %>
             </li>
           </ul>
