--- a/app/assets/builds/application.css
+++ b/app/assets/builds/application.css
@@ -52882,6 +52882,12 @@ input {
   border-bottom: 1px solid #777;
 }
 
+.image-holder img {
+  display: block;
+  max-height: 500px;
+  float: right;
+}
+
 /*!
  * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
