--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -4,3 +4,6 @@ $light-white: #eaeaea;
 $gray: #555;
 $dark-gray: #222;
 $bbb: #bbb;
+$weak-green: #6BCB77;
+$weak-red: #FF6B6B;
+$weak-yellow: #FFD93D;
