--- a/app/assets/builds/application.css
+++ b/app/assets/builds/application.css
@@ -52882,6 +52882,152 @@ input {
   border-bottom: 1px solid #777;
 }
 
+.image-holder img {
+  display: block;
+  max-height: 500px;
+  float: right;
+}
+
+a, a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+
+.section-products {
+  padding: 80px 0 54px;
+}
+.section-products .header {
+  margin-bottom: 50px;
+}
+.section-products .header h3 {
+  font-size: 1rem;
+  color: #fe302f;
+  font-weight: 500;
+}
+.section-products .header h2 {
+  font-size: 2.2rem;
+  font-weight: 400;
+  color: #444444;
+}
+.section-products .single-product {
+  margin-bottom: 26px;
+}
+.section-products .single-product .part-1 {
+  position: relative;
+  height: 290px;
+  max-height: 290px;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+.section-products .single-product .part-1 ::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.3s;
+}
+.section-products .single-product .part-1 ul {
+  position: absolute;
+  bottom: -41px;
+  left: 20px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  opacity: 0;
+  transition: bottom 0.5s, opacity 0.5s;
+}
+.section-products .single-product .part-1 ul li {
+  display: inline-block;
+  margin-right: 4px;
+}
+.section-products .single-product .part-1 ul li a {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  background-color: #FF6B6B;
+  color: #fff;
+  text-align: center;
+  box-shadow: 0 2px 20px rgba(50, 50, 50, 0.1);
+  transition: color 0.2s;
+}
+
+.section-products .single-product:hover .part-1::before {
+  transform: scale(1.2, 1.2) rotate(5deg);
+}
+
+.section-products .single-product .part-1 .discount,
+.section-products .single-product .part-1 .new {
+  position: absolute;
+  top: 15px;
+  left: 20px;
+  color: #ffffff;
+  background-color: #fe302f;
+  padding: 2px 8px;
+  text-transform: uppercase;
+  font-size: 0.85rem;
+}
+
+.section-products .single-product .part-1 .new {
+  left: 0;
+  background-color: #444444;
+}
+
+.section-products .single-product:hover .part-1 ul {
+  bottom: 30px;
+  opacity: 1;
+}
+
+.section-products .single-product .part-1 ul li a:hover {
+  color: #000;
+  background-color: #fff;
+}
+
+.section-products .single-product .part-2 .product-title {
+  font-size: 1rem;
+}
+
+.section-products .single-product .part-2 h4 {
+  display: inline-block;
+  font-size: 1rem;
+}
+
+.section-products .part-1 {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+.section-products .part-1 .product-status {
+  position: absolute;
+}
+.section-products .part-1 .product-status p {
+  font-size: smaller;
+  padding: 5px;
+  margin-top: 10px;
+  margin-left: 10px;
+  border-radius: 5px;
+  color: #fff;
+}
+.section-products .part-1 .product-status .status-on_demand {
+  background-color: #6BCB77;
+}
+.section-products .part-1 .product-status .status-suspension {
+  background-color: #FF6B6B;
+}
+.section-products .part-1 .product-status .status-comming_soon {
+  background-color: #FFD93D;
+}
+.section-products .part-1 img {
+  margin: auto;
+  display: block;
+  max-height: 100%;
+}
+.section-products .part-1 li a {
+  background-color: #FF6B6B;
+}
+
 /*!
  * Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
