--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,6 +1,7 @@
 @import 'admin-lte/build/scss/adminlte';
 @import 'bootstrap/scss/bootstrap';
 @import 'custom.scss';
+@import 'book_view.scss';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
 @import '@fortawesome/fontawesome-free/scss/regular';
 @import '@fortawesome/fontawesome-free/scss/solid';
