Add Crud Book Items

--- a/app/views/admin/books/show.html.erb
+++ b/app/views/admin/books/show.html.erb
@@ -36,6 +36,8 @@
         </div>
         </div>
       </div>
+      <%= link_to t(".view_items"), admin_book_book_items_path(@book),
+          class: "btn btn-info" %>
     </div>
   </div>
 </div>
